--- a/lib/archetype_definitions/root_custom.alz_archetype_override.yaml
+++ b/lib/archetype_definitions/root_custom.alz_archetype_override.yaml
@@ -1,6 +1,8 @@
 base_archetype: root
 name: root_custom
-policy_assignments_to_add: []
+policy_assignments_to_add:
+  - "Reg-Comp-Spain-ENS"
+  - "Reg-Comp-EU-AI-Act-2024"
 policy_assignments_to_remove: []
 policy_definitions_to_add: []
 policy_definitions_to_remove: []
