Revert policy changes in sovereign_root archetype and update slz_custom to use the original sovereign_root

--- a/lib/architecture_definitions/slz_custom.alz_architecture_definition.yaml
+++ b/lib/architecture_definitions/slz_custom.alz_architecture_definition.yaml
@@ -4,7 +4,7 @@ management_groups:
     display_name: Sovereign Landing Zone
     archetypes:
       - root_custom
-      - sovereign_root_custom
+      - sovereign_root
     exists: false
     parent_id: null
 
